--- a/style.css
+++ b/style.css
@@ -722,18 +722,19 @@ button {
     font-size: 12px;
 }
 
-.contactme h1 {
-    font-size: 36px;
-    font-weight: 800;
-    color: white;
-    text-align: center;
-    margin-bottom: 20px;
-}
 
 .contactme h3 {
     text-align: center;
     color: white;
     font-size: 16px;
+}
+
+.contactme p {
+    text-align: left;
+    line-height: 20px;
+    color: white;
+    font-size: 16px;
+    margin-bottom: 42px;
 }
 
 .contactme h4 {
@@ -1871,3 +1872,17 @@ select::-ms-expand {
 
 
 /*--------------------------responsive-end-----------------------------*/
+
+.cta {
+    background-color: #0085FF;
+    border-radius: 5px;
+    padding: 16px 20px;
+    color: white;
+    font-size: 14px;
+    font-weight: 600;
+    text-transform: uppercase;
+    margin: 20px auto 20px auto;
+    display: inline-block;
+    width: 100%;
+    text-align: center;
+}
